# Lab05_Aromal_Gigi

./: .gitignore  README.md  pyproject.toml  requirements.txt  training_pipeline.py
artifacts/EDA/: eda_inf_counts.txt  eda_missing_values.txt
artifacts/Features/: feature_selection_summary.txt
artifacts/Meta/: manifest.json  report.md
artifacts/PSI/: psi_final_summary.txt
artifacts/Tuning/: params_LogisticRegression.json  params_RandomForest.json  params_XGBoost.json
